--- a/src/main/resources/ifpr/pgua/eic/projetointegrador/fxml/principal.fxml
+++ b/src/main/resources/ifpr/pgua/eic/projetointegrador/fxml/principal.fxml
@@ -14,7 +14,7 @@
       <VBox alignment="TOP_CENTER" prefHeight="600.0" prefWidth="155.0" spacing="10.0">
          <Pane prefHeight="78.0" prefWidth="135.0">
             <children>
-               <Label layoutX="14.0" layoutY="27.0" text="Vendinha">
+               <Label layoutX="14.0" layoutY="27.0" text="First Period">
                   <font>
                      <Font name="System Bold" size="20.0" />
                   </font>
@@ -25,7 +25,7 @@
          <Button prefHeight="40.0" prefWidth="100.0" text="Produtos" />
          <Button prefHeight="40.0" prefWidth="100.0" text="Vendas" />
          <Button prefHeight="40.0" prefWidth="100.0" text="Nova Venda" />
-         <Button prefHeight="40.0" prefWidth="100.0" text="TELA LOGIN BOLADONAA" onAction="#carregarTelaLogin"/>
+         <Button prefHeight="40.0" prefWidth="100.0" text="Login" onAction="#abrirTelaLogin" />
          <BorderPane.margin>
             <Insets />
          </BorderPane.margin>
