--- a/src/main/resources/ifpr/pgua/eic/projetointegrador/fxml/principal.fxml
+++ b/src/main/resources/ifpr/pgua/eic/projetointegrador/fxml/principal.fxml
@@ -21,11 +21,12 @@
                </Label>
             </children>
          </Pane>
-         <Button prefHeight="40.0" prefWidth="100.0" text="Clientes" />
+         <Button prefHeight="40.0" prefWidth="100.0" text="Login" onAction="#abrirTelaLogin" />
+         <!-- <Button prefHeight="40.0" prefWidth="100.0" text="Clientes" />
          <Button prefHeight="40.0" prefWidth="100.0" text="Produtos" />
          <Button prefHeight="40.0" prefWidth="100.0" text="Vendas" />
-         <Button prefHeight="40.0" prefWidth="100.0" text="Nova Venda" />
-         <Button prefHeight="40.0" prefWidth="100.0" text="Login" onAction="#abrirTelaLogin" />
+         <Button prefHeight="40.0" prefWidth="100.0" text="Nova Venda" /> -->
+         
          <BorderPane.margin>
             <Insets />
          </BorderPane.margin>
