--- a/src/main/resources/ifpr/pgua/eic/projetointegrador/fxml/principal.fxml
+++ b/src/main/resources/ifpr/pgua/eic/projetointegrador/fxml/principal.fxml
@@ -22,8 +22,8 @@
             </children>
          </Pane>
          <Button prefHeight="40.0" prefWidth="100.0" text="Login" onAction="#abrirTelaLogin" />
-         <Button prefHeight="40.0" prefWidth="100.0" text="Ciclos Menstruais" />
-         <Button prefHeight="40.0" prefWidth="100.0" text="Informações" />
+         <Button prefHeight="40.0" prefWidth="100.0" text="Ciclos Menstruais" onAction="#abrirTelaCicloMenstrual"/>
+         <Button prefHeight="40.0" prefWidth="100.0" text="Informações" onAction="#abrirTelaInfo"/>
          
          <BorderPane.margin>
             <Insets />
