--- a/src/main/resources/ifpr/pgua/eic/projetointegrador/fxml/info.fxml
+++ b/src/main/resources/ifpr/pgua/eic/projetointegrador/fxml/info.fxml
@@ -11,7 +11,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
+
 
 <VBox prefHeight="600.0" prefWidth="800.0" spacing="10.0"
     xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
@@ -24,18 +26,28 @@
                     <Font size="18.0" />
                 </font>
             </Label> -->
-            <VBox layoutX="0" prefHeight="600.0" prefWidth="200.0" alignment="TOP_CENTER" spacing="7.0">
-                <Button prefWidth="100.0" text="Ciclo Menstrual" />
-                <Button prefWidth="100.0" text="Absorventes" />
-                <Button prefWidth="100.0" text="Cólicas" />
+            
+            <VBox layoutX="0" prefHeight="600.0" prefWidth="150.0" alignment="TOP_CENTER" spacing="7.0">
+                <Button prefWidth="150.0" text="Ciclo Menstrual" onAction="#onActionCiclo"/>
+                <Button prefWidth="150.0" text="Absorventes"/>
+                <Button prefWidth="150.0" text="Cólicas" />
             </VBox>
-
-            <VBox layoutX="200" prefHeight="600.0" prefWidth="600.0">
-                <Label  prefHeight="53.0" prefWidth="158.0" text="Informacões sobre:">
-                    <font>
-                        <Font size="18.0" />
-                    </font>
-                </Label>
+            <VBox layoutX="151" prefHeight="600.0" prefWidth="600.0">
+                <HBox prefHeight="100.0" alignment="CENTER" >
+                    <Label text="Informacões sobre:">
+                        <font>
+                            <Font size="18.0" />
+                        </font>
+                    </Label>
+                </HBox>
+                <VBox>
+                    <HBox fx:id="hbInfo">
+                        <!-- <VBox>
+                            <Label text="Informações pertinentes sobre menstruação" />
+                        </VBox> -->
+                    </HBox>
+                    
+                </VBox>
             </VBox>
         </children>
     </Pane>
