editar e excluir ciclos menstruais funcionando

--- a/src/main/resources/ifpr/pgua/eic/projetointegrador/fxml/ciclo.fxml
+++ b/src/main/resources/ifpr/pgua/eic/projetointegrador/fxml/ciclo.fxml
@@ -32,6 +32,9 @@
         <HBox alignment="CENTER_RIGHT">
             <Button onAction="#onActionEditar" text="Editar"/>
         </HBox>
+        <HBox alignment="CENTER_LEFT">
+            <Button onAction="#onActionExcluir" text="Excluir"/>
+        </HBox>
 
 
     </children>
