--- a/src/main/resources/ifpr/pgua/eic/projetointegrador/fxml/home.fxml
+++ b/src/main/resources/ifpr/pgua/eic/projetointegrador/fxml/home.fxml
@@ -18,11 +18,11 @@
     fx:controller="ifpr.pgua.eic.projetointegrador.controllers.TelaHome">
     <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
         <top>
-            <TextField alignment="CENTER" text="Bem Vinda!" BorderPane.alignment="CENTER">
+            <Label alignment="CENTER" text="Bem Vinda!" BorderPane.alignment="CENTER">
                 <font>
                     <Font size="18.0" />
                 </font>
-            </TextField>
+            </Label>
         </top>
     </BorderPane>
 </VBox>
