--- a/src/main/resources/ifpr/pgua/eic/projetointegrador/fxml/info.fxml
+++ b/src/main/resources/ifpr/pgua/eic/projetointegrador/fxml/info.fxml
@@ -32,7 +32,7 @@
                 <Button prefWidth="150.0" text="Absorventes" onAction="#onActionAbs"/>
                 <Button prefWidth="150.0" text="Cólicas" onAction="#onActionColicas"/>
             </VBox>
-            <VBox layoutX="151" prefHeight="600.0" prefWidth="600.0">
+            <VBox layoutX="151" prefHeight="600.0" prefWidth="400.0">
                 <HBox prefHeight="100.0" alignment="CENTER" >
                     <Label text="Informacões sobre:">
                         <font>
@@ -41,10 +41,9 @@
                     </Label>
                 </HBox>
                 <VBox>
-                    <HBox fx:id="hbInfo">
+                    <VBox fx:id="vbInfo">
                     
-                    </HBox>
-                    
+                    </VBox>
                 </VBox>
             </VBox>
         </children>
