--- a/src/main/resources/ifpr/pgua/eic/projetointegrador/fxml/cadciclo.fxml
+++ b/src/main/resources/ifpr/pgua/eic/projetointegrador/fxml/cadciclo.fxml
@@ -1,28 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.control.TextArea?>
 
-<VBox prefHeight="600.0" prefWidth="800.0" spacing="10.0"
-    xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
-    fx:controller="ifpr.pgua.eic.projetointegrador.controllers.TelaCiclo">
-    
-    <children>
-        <Label alignment="CENTER" text="Adicionar novo Ciclo Menstrual" textAlignment="CENTER" wrapText="false">
-            <font>
-                <Font size="18.0" />
-            </font>
-        </Label>        
-        <DatePicker fx:id="dpDataIni" layoutX="195.0" layoutY="158.0" prefHeight="18.0" prefWidth="168.0" promptText="Data de início" />
-        <DatePicker fx:id="dpDataTerm" layoutX="195.0" layoutY="158.0" prefHeight="18.0" prefWidth="168.0" promptText="Data de término" />     
-        <TextField fx:id="tfFluxo" promptText="Tipo de fluxo. Ex: médio, intenso." />
-        <TextArea fx:id="taComentarios" promptText="Comentários sobre seu ciclo" />    
-        <Button onAction="#onActionSalvar" text="Salvar" />                                                                                                                           
-    </children>
-
+<VBox prefHeight="600.0" prefWidth="800.0" spacing="10.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ifpr.pgua.eic.projetointegrador.controllers.TelaCiclo">
+    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
+        <children>
+            <Label alignment="CENTER" layoutX="157.0" layoutY="14.0" text="Adicionar novo Ciclo Menstrual" textAlignment="CENTER" wrapText="false">
+                <font>
+                    <Font size="18.0" />
+                </font>
+            </Label>        
+            <DatePicker fx:id="dpDataIni" layoutX="197.0" layoutY="86.0" prefHeight="18.0" prefWidth="168.0" promptText="Data de início" />
+            <DatePicker fx:id="dpDataTerm" layoutX="197.0" layoutY="136.0" prefHeight="18.0" prefWidth="168.0" promptText="Data de término" />     
+            <TextField fx:id="tfFluxo" layoutX="197.0" layoutY="183.0" prefHeight="25.0" prefWidth="168.0" promptText="Tipo de fluxo. Ex: médio, intenso." />
+            <TextArea fx:id="taComentarios" layoutX="125.0" layoutY="229.0" prefHeight="105.0" prefWidth="314.0" promptText="Comentários sobre seu ciclo" />    
+            <Button layoutX="258.0" layoutY="376.0" onAction="#onActionSalvar" text="Salvar" />                                                                                                                           
+        </children>
+    </AnchorPane>
 </VBox>
