--- a/src/main/resources/ifpr/pgua/eic/projetointegrador/fxml/ciclo.fxml
+++ b/src/main/resources/ifpr/pgua/eic/projetointegrador/fxml/ciclo.fxml
@@ -2,42 +2,34 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.text.Font?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox prefHeight="600.0" prefWidth="800.0" spacing="10.0"
-    xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
-    fx:controller="ifpr.pgua.eic.projetointegrador.controllers.TelaListCiclo">
+<VBox prefHeight="600.0" prefWidth="800.0" spacing="10.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ifpr.pgua.eic.projetointegrador.controllers.TelaListCiclo">
 
-    <children>
-        <HBox alignment="CENTER">
-            <Label alignment="CENTER" text="Ciclos Menstruais" textAlignment="CENTER" wrapText="false">
-                <font>
-                    <Font size="18.0" />
-                </font>
-            </Label>
-        </HBox>
-        <HBox alignment="CENTER_RIGHT">
-            <Button onAction="#onActionAdd" text="Adicionar novo ciclo"/>
-        </HBox>
-        <HBox alignment="CENTER" >
-            <ListView fx:id="lvCiclos" prefWidth="500.0">
-            </ListView>
-        </HBox>
-        <HBox alignment="CENTER_RIGHT">
-            <Button onAction="#onActionEditar" text="Editar"/>
-        </HBox>
-        <HBox alignment="CENTER_LEFT">
-            <Button onAction="#onActionExcluir" text="Excluir"/>
-        </HBox>
+    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="600.0" prefWidth="766.0" VBox.vgrow="ALWAYS">
+        <children>
+            <HBox alignment="CENTER" />
+            <HBox alignment="CENTER_RIGHT" />
+            <HBox alignment="CENTER" />
+            <HBox alignment="CENTER_RIGHT" />
+            <HBox alignment="CENTER_LEFT" layoutX="300.0" />
+             <ListView fx:id="lvCiclos" layoutX="97.0" layoutY="81.0" prefWidth="500.0">
+                </ListView>
+             <Button layoutX="547.0" layoutY="512.0" onAction="#onActionExcluir" text="Excluir" />
+             <Button layoutX="473.0" layoutY="43.0" onAction="#onActionAdd" text="Adicionar novo ciclo" />
+             <Label alignment="CENTER" layoutX="278.0" layoutY="1.0" text="Ciclos Menstruais" textAlignment="CENTER" wrapText="false">
+                 <font>
+                     <Font size="18.0" />
+                 </font>
+             </Label>
+             <Button layoutX="97.0" layoutY="512.0" onAction="#onActionEditar" text="Editar" />
 
 
-    </children>
-
+        </children>
+    </AnchorPane>
 
 </VBox>
