--- a/src/main/resources/ifpr/pgua/eic/projetointegrador/fxml/info.fxml
+++ b/src/main/resources/ifpr/pgua/eic/projetointegrador/fxml/info.fxml
@@ -1,52 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
+<VBox prefHeight="600.0" prefWidth="800.0" spacing="10.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ifpr.pgua.eic.projetointegrador.controllers.TelaInfo">
 
-<VBox prefHeight="600.0" prefWidth="800.0" spacing="10.0"
-    xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
-    fx:controller="ifpr.pgua.eic.projetointegrador.controllers.TelaInfo">
-
-    <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="332.0" prefWidth="477.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
-        <children>
-            <!-- <Label layoutX="160.0" layoutY="41.0" prefHeight="53.0" prefWidth="158.0" text="Informacões sobre:">
-                <font>
-                    <Font size="18.0" />
-                </font>
-            </Label> -->
-            
-            <VBox layoutX="0" prefHeight="600.0" prefWidth="150.0" alignment="TOP_CENTER" spacing="7.0">
-                <Button prefWidth="150.0" text="Ciclo Menstrual" onAction="#onActionCiclo"/>
-                <Button prefWidth="150.0" text="Absorventes" onAction="#onActionAbs"/>
-                <Button prefWidth="150.0" text="Cólicas" onAction="#onActionColicas"/>
-            </VBox>
-            <VBox layoutX="151" prefHeight="600.0" prefWidth="400.0">
-                <HBox prefHeight="100.0" alignment="CENTER" >
-                    <Label text="Informacões sobre:">
-                        <font>
-                            <Font size="18.0" />
-                        </font>
-                    </Label>
-                </HBox>
-                <VBox>
-                    <VBox fx:id="vbInfo">
-                    
+    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
+            <children>
+                <VBox alignment="TOP_CENTER" layoutX="32.0" layoutY="151.0" prefHeight="225.0" prefWidth="150.0" spacing="7.0">
+                    <AnchorPane>
+                        <Button onAction="#onActionCiclo" prefWidth="150.0" text="Ciclo Menstrual" />
+                    </AnchorPane>
+                     <Button onAction="#onActionColicas" prefWidth="150.0" text="Cólicas" />
+                     <Button onAction="#onActionAbs" prefWidth="150.0" text="Absorventes" />
+                </VBox>
+                <VBox layoutX="207.0" prefHeight="600.0" prefWidth="400.0">
+                    <HBox alignment="CENTER" prefHeight="100.0">
+                        <Label text="Informacões sobre:">
+                            <font>
+                                <Font size="18.0" />
+                            </font>
+                        </Label>
+                    </HBox>
+                    <VBox>
+                        <VBox fx:id="vbInfo">
+                        
+                        </VBox>
                     </VBox>
                 </VBox>
-            </VBox>
-        </children>
-    </Pane>
-
+            </children>
+    </AnchorPane>
 </VBox>
