--- a/src/main/resources/ifpr/pgua/eic/projetointegrador/fxml/login.fxml
+++ b/src/main/resources/ifpr/pgua/eic/projetointegrador/fxml/login.fxml
@@ -21,9 +21,9 @@
     <MenuBar VBox.vgrow="NEVER" />
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
       <children>
-        <Label alignment="CENTER" layoutX="195.0" layoutY="49.0" style="&#10;" text="Informacoes de login" textAlignment="CENTER" wrapText="false">
+        <Label alignment="CENTER" layoutX="195.0" layoutY="49.0" style="&#10;" text="Informações de login" textAlignment="CENTER" wrapText="false">
           <font>
-            <Font size="18.0" />
+            <Font size="18.0" name="System Bold"/>
           </font>
         </Label>
             <TextField fx:id="tfEmail" layoutX="195.0" layoutY="113.0" prefWidth="168.0" promptText="Email" />
